@@ -705,6 +705,7 @@ $(document).ready(function() {
                 // Make the Ajax call and get the data, wrap it and insert it
                 $.post('sql.php', {
                     'token' : window.parent.token,
+                    'server' : window.parent.server,
                     'db' : window.parent.db,
                     'ajax_request' : true,
                     'sql_query' : sql_query,
@@ -728,6 +729,7 @@ $(document).ready(function() {
                 var post_params = {
                         'ajax_request' : true,
                         'get_relational_values' : true,
+                        'server' : window.parent.server,
                         'db' : window.parent.db,
                         'table' : window.parent.table,
                         'column' : field_name,
@@ -753,6 +755,7 @@ $(document).ready(function() {
                 var post_params = {
                         'ajax_request' : true,
                         'get_enum_values' : true,
+                        'server' : window.parent.server,
                         'db' : window.parent.db,
                         'table' : window.parent.table,
                         'column' : field_name,
@@ -776,6 +779,7 @@ $(document).ready(function() {
                 var post_params = {
                         'ajax_request' : true,
                         'get_set_values' : true,
+                        'server' : window.parent.server,
                         'db' : window.parent.db,
                         'table' : window.parent.table,
                         'column' : field_name,
@@ -991,6 +995,7 @@ $(document).ready(function() {
                             'sql_query' : sql_query,
                             'disp_direction' : disp_mode,
                             'token' : window.parent.token,
+                            'server' : window.parent.server,
                             'db' : window.parent.db,
                             'table' : window.parent.table,
                             'clause_is_unique' : nonunique,
