@@ -12,6 +12,7 @@ phpMyAdmin - ChangeLog
 + patch #3433770 [config] Make location of php-gettext configurable
 - patch #3430291 [import] Handle conflicts in some open_basedir situations
 - bug #3431427 [display] Dropdown results - setting NULL does not work
+- patch #3428764 [edit] Inline edit on multi-server configuration
 
 3.4.7.1 (2011-11-10)
 - [security] Fixed possible local file inclusion in XML import
